# Stance-Classification

./: .env.example  .gitignore  AGENTS.md  Makefile  NEXT_PLAN.md  README.md  docker-compose.yaml  main.py  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt  research_context.md
data/: pipeline_status.json  preprocessing_analysis.json
data/labelled/: LABELING_GUIDE.md  README.md  labeling_analysis.json  labeling_dataset.csv  labeling_dataset.json
data/preprocessed/: comments_processed.csv  comments_processed_1.csv  comments_processed_2.csv  comments_processed_3.csv  comments_processed_4.csv  preprocessing_analysis.csv  preprocessing_analysis_3.csv  preprocessing_analysis_5.csv  preprocessing_analysis_detailed.json
data/scrapped/: comment_post.csv  comment_post_1.csv  comments_extracted.csv  tiktok_comments_raw.csv  tiktok_comments_raw_1.csv  youtube_comments_raw.csv
data/topic_modeling/: document_topics.csv  metrics.csv  metrics.json  platform_topic_distribution.csv  summary.md  topic_similarity.csv  topic_size.csv  topics.csv
data/topic_modeling/models/: count_vectorizer.pkl  lda.pkl  nmf.pkl  tfidf_vectorizer.pkl
docs/: uas.md
pipelines/: 01_collect_data.py  02_preprocess_data.py  03_prepare_labeling.py  04_topic_modeling.py  05_evaluation.py  __init__.py  main.py
